--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 /* 
     font-family: 'Poppins', sans-serif;
 */
-
 *,
 *::before,
 *::after {
@@ -35,23 +34,26 @@ h2 {
 .container {
   width: 80%;
   margin: 0 auto;
-  max-width: 900px;
-
+  max-width: 1100px;
   background-color: rgb(243, 236, 236);
   height: 100vh;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 1fr 2fr 2fr 1fr;
   grid-template-rows: repeat(4, 1fr);
 }
-/*****************/
 
-/* Navigation */
+/* Side */
 .dashboard__side {
   padding: 1em 2em;
   background-color: steelblue;
   color: #fff;
+  height: 100vh;
   grid-column: 1/2;
   grid-row: 1/5;
+}
+.dashboard-title-logo {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 .nav__link {
   margin-bottom: 3em;
@@ -59,6 +61,27 @@ h2 {
 .nav__link-list,
 .nav__link2-list {
   margin-bottom: 0.8em;
+}
+.nav__link-anchor,
+.nav__link2-anchor {
+  color: #fff;
+  text-transform: capitalize;
+  font-weight: 500;
+  letter-spacing: 1.6px;
+  transition: 250ms ease-in;
+}
+.nav__link-anchor:hover,
+.nav__link2-anchor:hover {
+  color: #000;
+}
+.dashboard__title {
+  margin-bottom: 0.9em;
+  margin-left: 5px;
+  font-size: 1.7rem;
+}
+.fa-table-columns {
+  font-size: 1.7rem;
+  margin-top: 5px;
 }
 
 /* Header */
@@ -69,6 +92,7 @@ h2 {
   grid-column: 2/5;
 }
 .search-icons {
+  margin-left: 1.5em;
   display: grid;
   grid-template-columns: 20px 4fr 1fr;
 }
@@ -85,24 +109,26 @@ input[type="text"] {
   width: 70%;
   background-color: rgb(216, 212, 212);
   margin-top: 1em;
-  /* margin-left: 4em; */
   height: 20px;
 }
 .fa-magnifying-glass {
   margin-top: 1.5em;
   font-size: 0.8rem;
 }
-
-/* Buttons */
+.greeting {
+  font-size: 0.8rem;
+  font-weight: 900;
+}
 .button-row {
   padding-left: 0.5em;
   margin-top: 1em;
   margin-bottom: 1em;
+  margin-left: 1em;
   display: grid;
   grid-template-columns: 50px 350px 3fr;
 }
 .user-btn {
-  width: 80px;
+  width: 95px;
   cursor: pointer;
   border: none;
   background-color: steelblue;
@@ -111,11 +137,34 @@ input[type="text"] {
   text-align: center;
   font-size: 0.8rem;
   padding: 0.5em;
+  transition: 250ms ease-in;
+}
+.user-btn:hover {
+  background-color: rgb(122, 173, 214);
+  color: rgb(107, 47, 47);
 }
 .user-cta {
   margin-top: 1em;
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  justify-self: end;
+  margin-right: 2em;
 }
-/* Typography */
+.button-row > .fa-face-grin-wink {
+  font-size: 3rem;
+}
+.user-name {
+  font-weight: 900;
+}
+
+/* Main Body **********/
+article {
+  padding: 1em;
+  grid-column: 2/4;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
 .projects-title {
   margin-top: 2em;
   padding-left: 1em;
@@ -126,20 +175,7 @@ input[type="text"] {
   padding-left: 1em;
   font-weight: 700;
   justify-self: end;
-  margin-right: 95px;
-}
-.dashboard-title-logo {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-.fa-table-columns {
-  font-size: 1.7rem;
-  margin-top: 5px;
-}
-.dashboard__title {
-  margin-bottom: 0.9em;
-  margin-left: 5px;
-  font-size: 1.7rem;
+  margin-right: 80px;
 }
 .anounce-trending {
   font-size: 0.9rem;
@@ -148,36 +184,11 @@ input[type="text"] {
 .card__title {
   font-size: 0.9rem;
 }
-
-.nav__link-anchor,
-.nav__link2-anchor {
-  color: #fff;
-  text-transform: capitalize;
-  font-weight: 500;
-  letter-spacing: 1.6px;
-}
-.greeting {
-  font-size: 0.8rem;
-  font-weight: 900;
-}
-.user-name {
-  font-weight: 900;
-}
-
-/* Main Body */
-article {
-  padding: 1em;
-  grid-column: 2/4;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-}
 .card {
   padding: 0.5em;
   background-color: #fff;
   border-radius: 5px;
   border-left: 10px solid gold;
-  /* box-shadow: 4px -3px 14px 4px rgba(0, 0, 0, 0.75); */
   box-shadow: 4px 0px 20px -4px rgba(0, 0, 0, 0.75);
   position: relative;
 }
@@ -196,7 +207,7 @@ article {
   grid-template-columns: 1fr 1fr;
 }
 
-/* Aside */
+/* Aside *********/
 aside {
   padding: 1em;
   display: grid;
@@ -225,9 +236,6 @@ aside {
   margin: 0.8em 0;
 }
 
-/*  */
-
-/****************/
 /* Emoji Icon */
 .fa-face-grin-wink {
   font-size: 1.5rem;
