--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h2 {
 .container {
   width: 80%;
   margin: 0 auto;
-  max-width: 1100px;
+  max-width: 1000px;
   background-color: rgb(243, 236, 236);
   height: 100vh;
   display: grid;
@@ -107,7 +107,7 @@ input[type="text"] {
   border: none;
   border-radius: 100px;
   width: 70%;
-  background-color: rgb(216, 212, 212);
+  background-color: rgb(245, 239, 239);
   margin-top: 1em;
   height: 20px;
 }
@@ -138,17 +138,19 @@ input[type="text"] {
   font-size: 0.8rem;
   padding: 0.5em;
   transition: 250ms ease-in;
+  border: 3px solid transparent;
 }
 .user-btn:hover {
-  background-color: rgb(122, 173, 214);
-  color: rgb(107, 47, 47);
+  background-color: rgb(167, 203, 233);
+  color: rgb(172, 28, 28);
+  border: 3px solid #000;
 }
 .user-cta {
   margin-top: 1em;
   display: grid;
   grid-template-columns: repeat(3, 100px);
   justify-self: end;
-  margin-right: 2em;
+  margin-right: 1.2em;
 }
 .button-row > .fa-face-grin-wink {
   font-size: 3rem;
@@ -185,16 +187,21 @@ article {
   font-size: 0.9rem;
 }
 .card {
+  cursor: pointer;
   padding: 0.5em;
   background-color: #fff;
   border-radius: 5px;
   border-left: 10px solid gold;
   box-shadow: 4px 0px 20px -4px rgba(0, 0, 0, 0.75);
   position: relative;
+  transition: ease-in-out 250ms;
 }
 .card p {
   font-size: 0.8rem;
   margin-bottom: 2em;
+}
+.card:hover {
+  background-color: rgba(211, 211, 211, 1);
 }
 .main-icons {
   position: absolute;
@@ -223,10 +230,21 @@ aside {
   box-shadow: 4px 0px 20px -4px rgba(0, 0, 0, 0.75);
 }
 .maintenance-card > p {
-  font-size: 0.6rem;
+  font-size: 0.5rem;
 }
+.maintenance-card li p {
+  display: inline-block;
+  font-size: 0.7rem;
+}
+.maintenance-card ul li {
+  display: grid;
+  grid-template-columns: 35px 1fr;
+}
+
 /* Aside Typography */
-.site-maintenance {
+.site-maintenance,
+.community,
+.policy {
   font-weight: 900;
 }
 .underline-main {
