--- a/css/style.css
+++ b/css/style.css
@@ -246,12 +246,19 @@ aside {
 .community,
 .policy {
   font-weight: 900;
+  text-decoration: underline;
+  color: #000;
+  font-size: 0.6rem;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
 }
+
 .underline-main {
   width: 150px;
   height: 2px;
   background-color: rgb(224, 215, 215);
-  margin: 0.8em 0;
+  margin: 0.7em 0;
 }
 
 /* Emoji Icon */
