--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
 /* 7 de junio, 2022 */
+/* Refactored 9 de junio, 2022 */
 /* Font Import */
 @import url("https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Poppins:ital,wght@0,300;0,600;1,300&family=Roboto&display=swap");
 
-/* 
-    font-family: 'Poppins', sans-serif;
-*/
 *,
 *::before,
 *::after {
@@ -18,10 +16,20 @@
   font-size: 0.9rem;
 }
 body {
-  background-color: rgb(29, 28, 28);
+  background-color: #333;
+}
+.container {
+  width: 80%;
+  margin: 0 auto;
+  max-width: 1100px;
+  background-color: lightgrey;
+  height: 110vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 2fr 4fr 1fr;
 }
 ul {
-  list-style-type: none;
+  list-style: none;
 }
 a {
   text-decoration: none;
@@ -31,30 +39,20 @@ h1,
 h2 {
   margin: 0;
 }
-.container {
-  width: 80%;
-  margin: 0 auto;
-  max-width: 1000px;
-  background-color: rgb(243, 236, 236);
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr 2fr 2fr 1fr;
+/***************/
 
-  grid-template-rows: 120px 1fr 1fr 1fr 1fr;
-}
-
-/* Side */
-.dashboard__side {
-  padding: 1em 2em;
+/* Navigation Sidebar ******/
+.left-sidebar-nav {
   background-color: steelblue;
-  color: #fff;
-  height: 100vh;
+  grid-row: 1/4;
   grid-column: 1/2;
-  grid-row: 1/5;
+  color: #fff;
+  padding: 1em 2em;
+  /* height: 100vh; */
 }
 .dashboard-title-logo {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 30px 100px;
 }
 .nav__link {
   margin-bottom: 3em;
@@ -85,13 +83,20 @@ h2 {
   margin-top: 5px;
 }
 
-/* Header */
+/* Header ******/
 .header {
+  background-color: #fff;
+  grid-row: 1/2;
+  grid-column: 2/5;
+  padding: 0.5em;
+}
+
+/* .header {
   padding: 0.5em;
   background-color: #fff;
   grid-row: 1/2;
   grid-column: 2/5;
-}
+} */
 .search-icons {
   margin-left: 1.5em;
   display: grid;
@@ -160,106 +165,80 @@ input[type="text"] {
   font-weight: 900;
 }
 
-/* Main Body **********/
-article {
-  padding: 1em;
-  grid-row: 3/4;
-  grid-column: 2/4;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-}
-.main-page-titles {
+/* Article Main Section ****/
+.main-section {
+  padding: 3em 1em;
+  /* background-color: green; */
   grid-row: 2/3;
-  grid-column: 2/5;
-  margin: 0;
+  grid-column: 2/4;
+  position: relative;
+}
+.main-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.projects-title {
-  margin-top: 2em;
-  padding-left: 1em;
-  font-weight: 700;
-}
-.anouncements-title {
-  margin-top: 2em;
-  padding-left: 1em;
-  font-weight: 700;
-  justify-self: end;
-  margin-right: 80px;
-}
-.anounce-trending {
-  font-size: 0.9rem;
-  margin: 1.2em 0;
-}
-.card__title {
-  font-size: 0.9rem;
+  gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 .card {
-  cursor: pointer;
-  padding: 0.5em;
+  position: relative;
   background-color: #fff;
   border-radius: 5px;
-  border-left: 10px solid gold;
-  box-shadow: 4px 0px 20px -4px rgba(0, 0, 0, 0.75);
-  position: relative;
+  padding: 1.5em;
+  font-size: 0.8rem;
+  border-left: 10px solid rgb(164, 141, 15);
+  cursor: pointer;
   transition: ease-in-out 250ms;
 }
-.card p {
-  font-size: 0.8rem;
+/* Hover State */
+.card:hover {
+  background-color: rgb(235, 229, 229);
+}
+.card__title {
+  font-weight: 900;
+  font-size: 1.2em;
+}
+.card__text {
+  font-size: 0.7rem;
   margin-bottom: 2em;
 }
-.card:hover {
-  background-color: rgba(211, 211, 211, 1);
+.main-section-titles {
+  font-size: 1rem;
+  margin-bottom: 0.5em;
 }
 .main-icons {
   position: absolute;
   bottom: 0;
-  right: 25px;
+  right: 20px;
+  display: grid;
+  grid-template-columns: 30px 30px 30px;
+  padding: 1em 0;
 }
 
-/* Aside *********/
-aside {
-  padding: 1em;
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 10px;
-  grid-row: 3/4;
+/* Aside Right Sidebar ******/
+.right-sidebar {
+  padding: 3em 1em;
+  /* background-color: pink; */
+  grid-row: 2/3;
   grid-column: 4/5;
 }
-.maintenance-card {
-  padding: 1em;
+.right-sidebar-box {
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 4px 0px 20px -4px rgba(0, 0, 0, 0.75);
+  padding: 1em;
+  font-size: 0.8rem;
+  margin-bottom: 3em;
 }
-.maintenance-card > p {
-  font-size: 0.5rem;
-}
-.maintenance-card li p {
-  display: inline-block;
-  font-size: 0.7rem;
-}
-.maintenance-card ul li {
-  display: grid;
-  grid-template-columns: 35px 1fr;
-}
-
-/* Aside Typography */
-.site-maintenance,
-.community,
-.policy {
+.right-sidebar-heading {
   font-weight: 900;
+  font-size: 0.7rem;
   text-decoration: underline;
-  color: #000;
-  font-size: 0.6rem;
-  margin: 0;
-  padding: 0;
   cursor: pointer;
 }
-
-.underline-main {
-  width: 150px;
+.right-sidebar-text {
+  font-size: 0.6rem;
+}
+.underline {
+  width: 90%;
   height: 2px;
   background-color: rgb(224, 215, 215);
   margin: 0.7em 0;
@@ -283,6 +262,12 @@ aside {
   color: rebeccapurple;
   font-size: 1.5rem;
 }
-.maintenance-card ul li {
+
+/* ************ */
+.right-sidebar-emoji ul li {
+  display: grid;
+  grid-template-columns: 35px 1fr;
+}
+.right-sidebar-emoji ul li {
   margin-bottom: 1.5em;
 }
